--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/golang"]
 	path = .vim/bundle/golang
 	url = https://github.com/jnwhiteh/vim-golang.git
+[submodule ".vim/bundle/gocode"]
+	path = .vim/bundle/gocode
+	url = https://github.com/Blackrush/vim-gocode.git
