--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule ".vim/bundle/tagbar"]
 	path = .vim/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
+[submodule ".vim/bundle/tagbar-phpctags.vim"]
+	path = .vim/bundle/tagbar-phpctags.vim
+	url = https://github.com/vim-php/tagbar-phpctags.vim.git
